<resources>
    <string name="app_name">Math Game</string>
    <string name="buttonAdd">Addition</string>
    <string name="AdditionBtn">Addition</string>
    <string name="SubBtn">Subtraction</string>
    <string name="MultBtn">Multiplication</string>
    <string name="score_game_act">Score:</string>
    <string name="score_value_game_act">0</string>
    <string name="life_game_act">Life:</string>
    <string name="life_value_game_act">3</string>
    <string name="time_game_act">Time:</string>
    <string name="time_value_game_act">60</string>
    <string name="answer_edittext_game_act">Please Write Your Answer Here</string>
    <string name="math_equation_game_act">Math Equation</string>
    <string name="next_question">Next Question</string>
    <string name="question_success">Congratulations!! You are correct</string>
    <string name="answer_wrong">You are wrong!!</string>
    <string name="random_operation">Random Operation</string>
    <string name="time_up">Sorry! Time is up!</string>
    <string name="congratulations">Congratulations</string>

    <string name="play_again">Play Again</string>
    <string name="exit">Exit</string>
    <string name="score">Score:</string>
</resources>