<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:orientation="vertical"
        android:background="@drawable/crop"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Game">
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="horizontal" android:weightSum="6">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="24sp"
                  android:text="@string/score_game_act" android:textStyle="bold" android:layout_weight="1"
                  android:textColor="@color/white" android:id="@+id/score_game_textView_game_act"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="24sp"
                  android:text="@string/score_value_game_act" android:textStyle="bold" android:layout_weight="1"
                  android:textColor="@color/white" android:id="@+id/score_value_textView_game_act"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="24sp"
                  android:text="@string/life_game_act" android:textStyle="bold" android:layout_weight="1"
                  android:textColor="@color/white" android:id="@+id/life_textView_game_act"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="24sp"
                  android:text="@string/life_value_game_act" android:textStyle="bold" android:layout_weight="1"
                  android:textColor="@color/white" android:id="@+id/life_value_textView_game_act"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="24sp"
                  android:textStyle="bold" android:layout_weight="1" android:textColor="@color/white" android:text="@string/time_game_act" android:id="@+id/time_textView_game_act"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="24sp"
                  android:textStyle="bold" android:layout_weight="1" android:textColor="@color/white" android:text="@string/time_value_game_act" android:id="@+id/time_value_textView_game_act"/>

    </LinearLayout>
    <TextView android:layout_width="200dp" android:layout_height="100dp" android:layout_gravity="center" android:textColor="@color/white" android:textSize="32sp" android:gravity="center" android:layout_marginTop="20dp" android:hint="@string/math_equation_game_act" android:textColorHint="@color/white" android:id="@+id/questions_game_act"/>
    <EditText android:layout_width="250dp" android:layout_height="50dp" android:layout_gravity="center" android:textColor="@color/white" android:hint="@string/answer_edittext_game_act" android:layout_marginTop="20dp" android:textColorHint="@color/white" android:id="@+id/answer_game_act"/>

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="horizontal" android:weightSum="2" android:layout_marginTop="30dp">

        <Button
                android:text="@android:string/ok"
                android:layout_width="150"
                android:layout_height="wrap_content" android:id="@+id/btn_ok_game_act" android:layout_weight="1"
                android:layout_marginLeft="10dp" android:layout_marginStart="10dp" android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"/>
        <Button
                android:text="@string/next_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/btn_next_game_act" android:layout_weight="1"
                android:layout_marginLeft="10dp" android:layout_marginStart="10dp" android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"/>
    </LinearLayout>
</LinearLayout>