<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Result"
        android:background="@drawable/goonies">


    <TextView
            android:text="@string/congratulations"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView" app:textAllCaps="false"/>
    <TextView
            android:hint="@string/score"

            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/score_txtvw_result_act"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:layout_marginTop="100dp">
        <Button
                android:text="@string/play_again"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/play_again_btn_result_act" android:layout_weight="1"
                android:layout_marginLeft="20dp" android:layout_marginStart="20dp" android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp"/>
        <Button
                android:text="@string/exit"
                android:id="@+id/exit_btn_result_act"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_weight="1"
                android:layout_marginLeft="20dp" android:layout_marginStart="20dp" android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp"/>
    </LinearLayout>
</LinearLayout>